force-app/main/default/objects/Venue_Contact__c/Venue_Contact__c.object-meta.xml
<CustomObject>
    <label>Venue Contact</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Venue Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>