force-app/main/default/objects/Venue_Contact__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bookings</fullName>
            </value>
            <value>
                <fullName>Alternate Bookings</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Alternate Emergency</fullName>
            </value>
            <value>
                <fullName>Parent Host</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>