force-app/main/default/objects/Venue_Contact__c/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <label>Venue</label>
    <referenceTo>Venue__c</referenceTo>
    <relationshipLabel>Venue Contacts</relationshipLabel>
    <relationshipName>Venue_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>